# sdc-quiz-activity-2

./: main.py  pyproject.toml
phase-1/: index.html
phase-2/: Jenkinsfile  README.md  docker-compose.yaml
phase-2/app/: Dockerfile  main.py  requirements.txt
phase-2/app/templates/: index.html
phase-3/: .env.dev  .env.example  .gitignore  COMMANDS.bat  COMMANDS.sh  README.md  docker-compose.yaml  init.sql
phase-3/app/: Dockerfile  main.py  requirements.txt
phase-3/app/templates/: index.html
phase-3/kubernetes/: deployment.yaml  service.yaml
