[project]
name = "sdc-quiz-activity-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.123.9",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "gunicorn>=23.0.0",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
